--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.3",
     "next": "12.0.7",
     "next-themes": "^0.0.15",
     "react": "17.0.2",
