--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.3",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
     "next": "12.0.7",
+    "next-mdx-remote": "^3.0.8",
     "next-redux-wrapper": "^7.0.5",
     "next-themes": "^0.0.15",
+    "path": "^0.12.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
