--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.3",
+    "@hookform/resolvers": "^2.8.8",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "next": "12.0.7",
@@ -18,9 +19,11 @@
     "path": "^0.12.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.25.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
