--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.3",
     "@hookform/resolvers": "^2.8.8",
+    "@tailwindcss/line-clamp": "^0.3.1",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "next": "12.0.7",
