--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.25.1",
     "react-redux": "^7.2.6",
+    "react-syntax-highlighter": "^15.4.5",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "yup": "^0.32.11"
