--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-syntax-highlighter": "^15.4.5",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "sharp": "^0.30.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
